namespace Globals {
    public static class AnimParams {
        public const string MinionCanAttack = "canAttack";
        public const string MinionIsAttack = "isAttack";
        public const string MinionIsStunned = "isStunned";
        public const string MinionIsAwake = "isAwake";
        public const string MinionIsActive = "isActive";
        public const string MinionIsMoving = "isMoving";
    }
}